[package]
name = "pbase"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.8", features = ["serde"] }
bytes = "1.10"
memmap = "0.7"
rand = "0.9"
sqlite = "0.37"

[[bin]]
name = "smoke"
path = "src/bin/smoke.rs"

[[bin]]
name = "create_bigtable"
path = "src/bin/create_bigtable.rs"

[[bin]]
name = "bigtable_insert"
path = "src/bin/bigtable_insert.rs"

[[bin]]
name = "sqlite"
path = "src/bin/sqlite.rs"
