[package]
name = "pbase"
version = "0.1.0"
edition = "2021"
description = "Toy database"
license = "MIT"
repository = "https://github.com/itarato/pbase"
readme = "README.md"
keywords = ["database"]
categories = ["learning"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.8", features = ["serde"] }
memmap = "0.7"
rand = "0.9"
sqlite = "0.37"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
glob = "0.3"

[[bin]]
name = "smoke"
path = "src/bin/smoke.rs"

[[bin]]
name = "bigtable_create"
path = "src/bin/bigtable_create.rs"

[[bin]]
name = "bigtable_insert"
path = "src/bin/bigtable_insert.rs"

[[bin]]
name = "bigtable_select"
path = "src/bin/bigtable_select.rs"

[[bin]]
name = "bigtable_dump"
path = "src/bin/bigtable_dump.rs"

[[bin]]
name = "sqlite"
path = "src/bin/sqlite.rs"
